--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router": "^5.1.20",
     "axios": "^1.2.6",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.8.1",
+    "react-router-native": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "with-router": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/reach__router": "^1.3.11",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
