--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-native": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4",
     "with-router": "^1.0.1"
