--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+
+
     "@types/react-router": "^5.1.20",
     "axios": "^1.2.6",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.0",
     "react-router-native": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
-    "typescript": "^4.9.3",
+    "typescript": "^3.7.2",
     "web-vitals": "^2.1.4",
     "with-router": "^1.0.1"
   },
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "@types/reach__router": "^1.3.11",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11"
   }
 }
