--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
-
-
     "@types/react-router": "^5.1.20",
+    "@types/redux-form": "^8.3.5",
     "axios": "^1.2.6",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
@@ -20,7 +19,8 @@
     "react-router-dom": "^6.8.0",
     "react-router-native": "^6.8.1",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
+    "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
     "typescript": "^3.7.2",
     "web-vitals": "^2.1.4",
@@ -54,8 +54,8 @@
   },
   "devDependencies": {
     "@types/reach__router": "^1.3.11",
-    "@types/react-router-dom": "^5.3.3",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
