--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.2.1",
     "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8",
     "typescript": "^3.7.2",
     "web-vitals": "^2.1.4",
     "with-router": "^1.0.1"
